--- a/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
+++ b/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
@@ -43,6 +43,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime" />
   </ItemGroup>
   <Choose>
@@ -58,6 +59,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="LevelsTests\ActorStateLensTests.cs" />
+    <Compile Include="LevelsTests\ActorStateTests.cs" />
     <Compile Include="LevelsTests\ActorTests.cs" />
     <Compile Include="LevelsTests\ActorLensTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
