Sort out license headers unicode issue

--- a/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
+++ b/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
@@ -63,6 +63,8 @@
     <Compile Include="LevelsTests\ActorStateTests.cs" />
     <Compile Include="LevelsTests\ActorTests.cs" />
     <Compile Include="LevelsTests\ActorLensTests.cs" />
+    <Compile Include="LevelsTests\HitPointsLensTests.cs" />
+    <Compile Include="LevelsTests\HitPointsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
