Start on Thing tests. Simplify lens testing with new base class

--- a/Woz.Lenses.Tests/Woz.Lenses.Tests.csproj
+++ b/Woz.Lenses.Tests/Woz.Lenses.Tests.csproj
@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BaseLensTests.cs" />
     <Compile Include="ImmutableDictionaryLensTests.cs" />
     <Compile Include="LensTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
