--- a/Woz.Core/Woz.Core.csproj
+++ b/Woz.Core/Woz.Core.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Conversion\EnumConversions.cs" />
     <Compile Include="Conversion\StringConversion.cs" />
     <Compile Include="Drawing\PointExtensions.cs" />
+    <Compile Include="EnumUtils.cs" />
     <Compile Include="Generators\IdGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Singleton.cs" />
