More validator tests. Triggered extra validation requirements on if a tile is valid move

--- a/Woz.RogueEngine/Woz.RogueEngine.csproj
+++ b/Woz.RogueEngine/Woz.RogueEngine.csproj
@@ -72,7 +72,9 @@
     <Compile Include="Levels\ActorState.cs" />
     <Compile Include="Levels\Level.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validators\TypeGroups.cs" />
+    <Compile Include="Validators\ThingTypeGroups.cs" />
+    <Compile Include="Validators\ThingValidators.cs" />
+    <Compile Include="Validators\TileTypeGroups.cs" />
     <Compile Include="Validators\LevelValidators.cs" />
     <Compile Include="Validators\CommandValidators.cs" />
     <Compile Include="Validators\TileValidators.cs" />
