--- a/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
+++ b/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="LevelsTests\TileLensTests.cs" />
     <Compile Include="LevelsTests\TileTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidatorsTests\ActorValidatorsTests.cs" />
     <Compile Include="ValidatorsTests\LevelValidatorsTests.cs" />
     <Compile Include="ValidatorsTests\TileValidatorsTests.cs" />
   </ItemGroup>
