Catching up on unit tests. Found that System.Drawing.Point was a mutable struct so forced to create Coordinate struct that is immutable. Coordinate needs tests but in and working

--- a/Woz.Core/Woz.Core.csproj
+++ b/Woz.Core/Woz.Core.csproj
@@ -38,7 +38,7 @@
     <Compile Include="Collections\EnumerableExtensions.cs" />
     <Compile Include="Conversion\EnumConversions.cs" />
     <Compile Include="Conversion\StringConversion.cs" />
-    <Compile Include="Drawing\PointExtensions.cs" />
+    <Compile Include="Coordinates\Coordinate.cs" />
     <Compile Include="EnumUtils.cs" />
     <Compile Include="Generators\IdGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -53,6 +53,7 @@
       <Name>Woz.Monads</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
