--- a/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
+++ b/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
@@ -71,7 +71,9 @@
     <Compile Include="LevelsTests\ThingTests.cs" />
     <Compile Include="LevelsTests\TileLensTests.cs" />
     <Compile Include="LevelsTests\TileTests.cs" />
+    <Compile Include="OperationsTests\LevelOperationsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestInstances\SimpleLevel.cs" />
     <Compile Include="ValidatorsTests\ActorValidatorsTests.cs" />
     <Compile Include="ValidatorsTests\LevelValidatorsTests.cs" />
     <Compile Include="ValidatorsTests\TileValidatorsTests.cs" />
