--- a/Woz.Core/Woz.Core.csproj
+++ b/Woz.Core/Woz.Core.csproj
@@ -38,7 +38,9 @@
     <Compile Include="Collections\EnumerableExtensions.cs" />
     <Compile Include="Conversion\EnumConversions.cs" />
     <Compile Include="Conversion\StringConversion.cs" />
-    <Compile Include="Coordinates\Coordinate.cs" />
+    <Compile Include="Geometry\Coordinate.cs" />
+    <Compile Include="Geometry\Size.cs" />
+    <Compile Include="Geometry\Vector.cs" />
     <Compile Include="EnumUtils.cs" />
     <Compile Include="Generators\IdGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
