--- a/Woz.Core.Tests/Woz.Core.Tests.csproj
+++ b/Woz.Core.Tests/Woz.Core.Tests.csproj
@@ -55,6 +55,9 @@
     <Compile Include="ConversionTests\EnumConversionTests.cs" />
     <Compile Include="ConversionTests\StringConversionTests.cs" />
     <Compile Include="GeneratorsTests\IdGeneratorTests.cs" />
+    <Compile Include="GeometryTests\CoordinateTests.cs" />
+    <Compile Include="GeometryTests\SizeTests.cs" />
+    <Compile Include="GeometryTests\VectorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingletonTests.cs" />
     <Compile Include="EnumUtilsTests.cs" />
