New project for route finding added. Correction of typo in headers

--- a/Woz.RogueEngine.Tests/packages.config
+++ b/Woz.RogueEngine.Tests/packages.config
@@ -4,7 +4,7 @@
 Copyright (C) Woz.Software 2015
 [https://github.com/WozSoftware/BadlyDrawRogue]
 
-This file is part of Woz.RoqueEngine.
+This file is part of Woz.RogueEngine.
 
 Woz.RoqueEngine is free software: you can redistribute it 
 and/or modify it under the terms of the GNU General Public 
@@ -19,7 +19,6 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
-
 <packages>
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net45" />
   <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
