--- a/Woz.PathFinding/Woz.PathFinding.csproj
+++ b/Woz.PathFinding/Woz.PathFinding.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="Path.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RouteCandidate.cs" />
+    <Compile Include="LocationCandiate.cs" />
     <Compile Include="RouteFinder.cs" />
   </ItemGroup>
   <ItemGroup>
