--- a/Woz.Linq/Woz.Linq.csproj
+++ b/Woz.Linq/Woz.Linq.csproj
@@ -36,6 +36,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collections\EnumerableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Xml\XAttributeHelpers.cs" />
     <Compile Include="Xml\XElementHelpers.cs" />
