--- a/Woz.Linq.Tests/Woz.Linq.Tests.csproj
+++ b/Woz.Linq.Tests/Woz.Linq.Tests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CollectionsTests\EnumerableCollectionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlTests\AttributeHelpersTests.cs" />
     <Compile Include="XmlTests\ElementHelpersTests.cs" />
