--- a/Woz.PathFinding/Woz.PathFinding.csproj
+++ b/Woz.PathFinding/Woz.PathFinding.csproj
@@ -55,6 +55,10 @@
       <Project>{E030E5BA-A70A-4023-92D7-D20A7F4102F4}</Project>
       <Name>Woz.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Woz.Linq\Woz.Linq.csproj">
+      <Project>{1C394BD3-381E-4A26-9263-7E4057BD3BFF}</Project>
+      <Name>Woz.Linq</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Woz.Monads\Woz.Monads.csproj">
       <Project>{5765091D-856C-41D4-B97E-AA7A3D0ED5BA}</Project>
       <Name>Woz.Monads</Name>
