--- a/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
+++ b/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
@@ -96,6 +96,10 @@
       <Project>{95E4674D-638D-4B89-8732-106F10D27B1C}</Project>
       <Name>Woz.Lenses</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Woz.Linq\Woz.Linq.csproj">
+      <Project>{1C394BD3-381E-4A26-9263-7E4057BD3BFF}</Project>
+      <Name>Woz.Linq</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Woz.Monads\Woz.Monads.csproj">
       <Project>{5765091D-856C-41D4-B97E-AA7A3D0ED5BA}</Project>
       <Name>Woz.Monads</Name>
