--- a/Woz.RogueEngine/Woz.RogueEngine.csproj
+++ b/Woz.RogueEngine/Woz.RogueEngine.csproj
@@ -96,6 +96,10 @@
       <Project>{95E4674D-638D-4B89-8732-106F10D27B1C}</Project>
       <Name>Woz.Lenses</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Woz.Linq\Woz.Linq.csproj">
+      <Project>{1C394BD3-381E-4A26-9263-7E4057BD3BFF}</Project>
+      <Name>Woz.Linq</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Woz.Monads\Woz.Monads.csproj">
       <Project>{5765091d-856c-41d4-b97e-aa7a3d0ed5ba}</Project>
       <Name>Woz.Monads</Name>
