Visible region re-written to trace far less rays. Only traces to outer edges and sets view grid instead of calling CanSee to each cell

--- a/Woz.FieldOfView/Woz.FieldOfView.csproj
+++ b/Woz.FieldOfView/Woz.FieldOfView.csproj
@@ -37,6 +37,7 @@
     <Compile Include="LineOfSight.cs" />
     <Compile Include="Octants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewPort.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Woz.Core\Woz.Core.csproj">
