--- a/Woz.PathFinding.Tests/Woz.PathFinding.Tests.csproj
+++ b/Woz.PathFinding.Tests/Woz.PathFinding.Tests.csproj
@@ -52,6 +52,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="LocationCandidateTests.cs" />
     <Compile Include="RouteFinderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
