--- a/Woz.RogueEngine/Woz.RogueEngine.csproj
+++ b/Woz.RogueEngine/Woz.RogueEngine.csproj
@@ -47,31 +47,31 @@
     <Compile Include="Definitions\EntityParser.cs" />
     <Compile Include="Definitions\XmlAttributes.cs" />
     <Compile Include="Definitions\XmlNames.cs" />
-    <Compile Include="Levels\Actor.cs" />
-    <Compile Include="Levels\ActorLens.cs" />
+    <Compile Include="State\Actor.cs" />
+    <Compile Include="State\Lenses\ActorLens.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Events\EventFactory.cs" />
     <Compile Include="Events\EventDetails.cs" />
     <Compile Include="Events\EventTypes.cs" />
     <Compile Include="Events\TargetTypes.cs" />
-    <Compile Include="Levels\ActorStateLens.cs" />
-    <Compile Include="Levels\ActorTypes.cs" />
-    <Compile Include="Levels\DamageTypes.cs" />
-    <Compile Include="Levels\ThingLens.cs" />
-    <Compile Include="Levels\ThingTypes.cs" />
-    <Compile Include="Levels\EquipmentSlots.cs" />
-    <Compile Include="Levels\HitPoints.cs" />
-    <Compile Include="Levels\HitPointsLens.cs" />
-    <Compile Include="Levels\LevelLens.cs" />
-    <Compile Include="Levels\StatisticTypes.cs" />
-    <Compile Include="Levels\Thing.cs" />
-    <Compile Include="Levels\Tile.cs" />
-    <Compile Include="Levels\TileLens.cs" />
-    <Compile Include="Levels\TileTypes.cs" />
+    <Compile Include="State\Lenses\ActorStateLens.cs" />
+    <Compile Include="State\ActorTypes.cs" />
+    <Compile Include="State\DamageTypes.cs" />
+    <Compile Include="State\Lenses\ThingLens.cs" />
+    <Compile Include="State\ThingTypes.cs" />
+    <Compile Include="State\EquipmentSlots.cs" />
+    <Compile Include="State\HitPoints.cs" />
+    <Compile Include="State\Lenses\HitPointsLens.cs" />
+    <Compile Include="State\Lenses\LevelLens.cs" />
+    <Compile Include="State\StatisticTypes.cs" />
+    <Compile Include="State\Thing.cs" />
+    <Compile Include="State\Tile.cs" />
+    <Compile Include="State\Lenses\TileLens.cs" />
+    <Compile Include="State\TileTypes.cs" />
     <Compile Include="Operations\InteractionTarget.cs" />
     <Compile Include="Operations\LevelOperations.cs" />
-    <Compile Include="Levels\ActorState.cs" />
-    <Compile Include="Levels\Level.cs" />
+    <Compile Include="State\ActorState.cs" />
+    <Compile Include="State\Level.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validators\ActorValidators.cs" />
     <Compile Include="Validators\Rules\ThingTypeRules.cs" />
