Thing now has list of valid slots. Allows handling of items that are valid in a number of slots

--- a/Woz.BadlyDrawnRogue/Woz.BadlyDrawnRogue.csproj
+++ b/Woz.BadlyDrawnRogue/Woz.BadlyDrawnRogue.csproj
@@ -96,10 +96,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Definitions\EntityDefinitions.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </Content>
+    <Content Include="Definitions\GameDefinitions.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
