Combat related stats extracted to Maybe<CombatDetails> as not all Things are combat related

--- a/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
+++ b/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
@@ -60,6 +60,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="StateTests\CombatStatisticsTests.cs" />
     <Compile Include="StateTests\LensesTests\ActorStateLensTests.cs" />
     <Compile Include="StateTests\ActorStateTests.cs" />
     <Compile Include="StateTests\ActorTests.cs" />
